# neo

./: .gitignore  AGENTS.md  CX.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  linear-migration-ezc2-to-neo-agent.json
crates/agent-core/: Cargo.toml
crates/agent-core/src/: events.rs  lib.rs  messages.rs  permissions.rs  runtime.rs
crates/agent-core/src/mode/: mod.rs  plan.rs
crates/agent-core/src/session/: index.rs  jsonl.rs  mod.rs  workspace.rs
crates/agent-core/src/tools/: bash.rs  edit.rs  mcp.rs  mod.rs  plan_mode.rs  process_supervisor.rs  read.rs  terminal.rs  todo.rs  write.rs
crates/agent-core/tests/: runtime_turn.rs  session_jsonl.rs  session_tree.rs  tool_bash.rs  tool_files.rs  tool_mcp.rs  tool_terminal.rs
crates/cloud-protocol/: Cargo.toml
crates/cloud-protocol/src/: lib.rs
crates/extensions/: Cargo.toml
crates/extensions/src/: discovery.rs  installation.rs  lib.rs  lifecycle.rs  package.rs  runner.rs
crates/extensions/tests/: installation.rs  lifecycle.rs  package.rs  runner.rs
crates/neo-agent/: Cargo.toml
crates/neo-agent-core/: Cargo.toml
crates/neo-agent-core/src/: approval.rs  btw.rs  btw_panel.rs  events.rs  harness.rs  lib.rs  messages.rs  oauth.rs  permissions.rs  runtime.rs  sidecar.rs  workspace_policy.rs
crates/neo-agent-core/src/compaction/: compaction_instruction.md  micro.rs  mod.rs  projection.rs  summary.rs
crates/neo-agent-core/src/goal/: mod.rs
crates/neo-agent-core/src/injection/: injector.rs  manager.rs  mod.rs  plan_mode.rs
crates/neo-agent-core/src/instructions/: mod.rs  registry.rs  resolver.rs  types.rs
crates/neo-agent-core/src/mode/: mod.rs  plan.rs  plan_mode_guard.rs
crates/neo-agent-core/src/multi_agent/: identity.rs  mailbox.rs  mod.rs  names.rs  profile.rs  progress.rs  runtime.rs  scheduler.rs  state.rs
crates/neo-agent-core/src/oauth/: callback_server.rs  mod.rs  store.rs
crates/neo-agent-core/src/rpc/: codec.rs  mod.rs
crates/neo-agent-core/src/runtime/: agent.rs  chat_request.rs  compaction_controller.rs  compaction_trigger.rs  config.rs  context.rs  context_budget.rs  error.rs  events.rs  image_blobs.rs  instruction_context.rs  legacy.rs  mod.rs  permission.rs  plan_orchestration.rs  queue.rs  retry.rs  skill_dispatch.rs  stream_aggregator.rs  tokens.rs  tool_arguments.rs  tool_dispatch.rs  turn_loop.rs  workflow_dispatch.rs
crates/neo-agent-core/src/session/: agent_state.rs  atomic_file.rs  event_persistence.rs  export.rs  index.rs  jsonl.rs  layout.rs  mod.rs  workspace.rs
crates/neo-agent-core/src/skills/: arguments.rs  context.rs  discovery.rs  metadata.rs  mod.rs
crates/neo-agent-core/src/tools/: ask_user.rs  background_tasks.rs  bash.rs  (+26 more)
crates/neo-agent-core/tests/: extension_runner.rs  goals.rs  instruction_registry.rs  multi_agent_background.rs  multi_agent_roles.rs  multi_agent_runtime.rs  multi_agent_scheduler.rs  rpc_jsonl.rs  runtime_turn.rs  session_jsonl.rs  session_state.rs  session_tree.rs  shell_messages.rs  shell_runner.rs  skills.rs  tool_bash.rs  tool_files.rs  tool_mcp.rs  tool_names.rs  tool_permissions.rs  tool_schema_descriptions.rs  tool_terminal.rs  workflow_dispatch.rs  workflow_journal.rs  workflow_launch.rs  workflow_lua.rs  workflow_runtime.rs
crates/neo-agent/src/: cli.rs  clipboard.rs  cloud_commands.rs  config.rs  config_ops.rs  extension_commands.rs  extension_tools.rs  image_blob.rs  json_store.rs  log_capture.rs  main.rs  mcp_ops.rs  package_commands.rs  path_key.rs  prompt_history.rs  prompt_parts.rs  prompt_templates.rs  resources.rs  rpc_mode.rs  rpc_types.rs  session_cloud.rs  session_commands.rs  session_migrate.rs  skill_commands.rs  themes.rs  trust.rs  trust_commands.rs  workspaces.rs
crates/neo-agent/tests/: cli_commands.rs  mock_provider_e2e.rs  process_guard.rs  process_guard_windows.rs  rpc_mode.rs  session_migration.rs  shell_admission_runtime.rs  tool_bash_guardian.rs  tool_terminal_guardian.rs  workflow_notifications.rs
crates/neo-ai/: Cargo.toml
crates/neo-ai/src/: auth.rs  catalog.rs  env_api_keys.rs  error.rs  error_info.rs  lib.rs  options.rs  reasoning.rs  registry.rs  stream.rs  tool_assembly.rs  tool_schema.rs  types.rs
crates/neo-ai/tests/: env_and_options.rs  fake_provider.rs  model_registry.rs  openai_compatible_provider.rs  provider_resolver.rs  real_provider_adapters.rs  tool_schema_and_stream.rs
crates/neo-cloud/: Cargo.toml
crates/neo-cloud/src/: lib.rs  main.rs
crates/neo-cloud/tests/: auth_profile_api.rs
crates/neo-tui/: Cargo.toml
crates/neo-tui/src/: ansi.rs  app.rs  chrome.rs  components.rs  diff_model.rs  image.rs  input.rs  lib.rs  markdown.rs  neo_tui.rs  notify.rs  paste.rs  renderer.rs  runtime.rs  searchable_list.rs  streaming.rs  terminal_capabilities.rs  token_estimate.rs  tool_diff.rs
crates/neo-tui/tests/: app_shell.rs  core_components.rs  diff_model.rs  image_protocols.rs  inline_terminal.rs  kimi_core.rs  kimi_markdown.rs  kimi_runtime.rs  kimi_scrollback.rs  kimi_thinking.rs  kimi_tool_cards.rs  kimi_tool_grouping.rs  kimi_transcript_store.rs  live_renderer.rs  markdown_rendering.rs  multi_agent_transcript.rs  primitives.rs  shell_events.rs  shell_mode_render.rs  shell_mode_state.rs  shell_mode_theme.rs  shell_output.rs  task_browser.rs  terminal_frame.rs  terminal_scrollback.rs  thinking_blocks.rs  todo_question.rs  tool_cards.rs  tool_grouping.rs  transcript.rs  transcript_pane.rs  transcript_store.rs  trust_dialog.rs  workflow_transcript.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: cloud.rs  lib.rs  rpc.rs  skills.rs
crates/sdk/tests/: cloud_client.rs  export_html.rs  rpc_jsonl.rs  skills.rs
crates/tui/: Cargo.toml
crates/tui/src/: ansi.rs  app.rs  app_renderer.rs  components.rs  diff.rs  image.rs  input.rs  lib.rs  renderer.rs
crates/tui/tests/: app_shell.rs  diff_model.rs  image_protocols.rs  kimi_core.rs  kimi_runtime.rs  kimi_scrollback.rs  kimi_tool_cards.rs  primitives.rs  todo_question.rs
examples/rust/: Cargo.toml  model_catalog.rs  provider_registry.rs  runtime_turn.rs  session_replay.rs  tool_schema.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+628 files in other folders)
