[workspace]
members = [
    "crates/ai",
    "crates/agent-core",
    "crates/sdk",
    "crates/extensions",
    "crates/tui",
    "crates/neo-agent",
    "examples/rust",
    "xtask"
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/matrixheaven/neo"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.7"
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ed25519-dalek = "2.2.0"
futures = "0.3.31"
globset = "0.4.18"
ignore = "0.4.25"
jsonschema = "0.37.4"
pulldown-cmark = "0.13.0"
ratatui = "0.29.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "stream", "rustls-tls"], default-features = false }
rusqlite = { version = "0.40.1", features = ["bundled"] }
rustix = { version = "1.1.4", features = ["process"] }
schemars = { version = "1.1.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
syntect = "5.3.0"
tar = "0.4.46"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "process", "fs", "signal", "time", "io-util", "sync", "net"] }
tokio-util = "0.7.17"
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
unicode-width = "0.2.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

# ── Build-speed profiles ──────────────────────────────────────────────
# Faster incremental builds & test compilation:
#   - incremental compilation enabled (dev default, explicit for clarity)
#   - limited debug-info for dependencies (line tables only) to cut codegen
#   - separate debug info for local crates so backtraces are still useful
[profile.dev]
incremental = true
debug = "line-tables-only"

[profile.dev.package."*"]
debug = 0

[profile.test]
incremental = true
debug = "line-tables-only"

[profile.test.package."*"]
debug = 0
