[package]
name = "neo-agent-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
globset.workspace = true
ignore.workspace = true
neo-ai = { path = "../ai" }
portable-pty = "0.9.0"
regex.workspace = true
reqwest.workspace = true
rustix.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
