[package]
name = "neo-cloud-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
neo-agent-core = { path = "../agent-core" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
