[package]
name = "neo-extensions"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
neo-sdk = { path = "../sdk" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]

[lints]
workspace = true
