[package]
name = "neo-agent-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
globset.workspace = true
ignore.workspace = true
neo-ai = { path = "../neo-ai" }
portable-pty = "0.9.0"
pulldown-cmark.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
rmcp = { version = "1.8.0", features = ["client", "auth", "transport-child-process", "transport-streamable-http-client-reqwest"] }
rustix.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
shlex.workspace = true
sha2.workspace = true
similar = "2"
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[dev-dependencies]
temp-env = "0.3"
tempfile.workspace = true

[lints]
workspace = true
