[package]
name = "neo-agent-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
globset.workspace = true
http.workspace = true
ignore.workspace = true
mlua = { version = "0.10", features = ["lua54", "vendored", "send", "async", "serialize"] }
neo-ai = { path = "../neo-ai" }
portable-pty = "0.9.0"
pulldown-cmark.workspace = true
regex.workspace = true
reqwest.workspace = true
rmcp = { version = "1.8.0", features = ["client", "auth", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest"], default-features = false }
rustix.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sse-stream.workspace = true
sha2.workspace = true
similar = "2"
thiserror.workspace = true
tokio.workspace = true
tempfile.workspace = true
toml.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
winapi.workspace = true
windows-acl.workspace = true
win32job = "2.0.3"

[dev-dependencies]
oauth2 = { version = "5.0", default-features = false }
rmcp = { version = "1.8.0", default-features = false, features = ["server", "macros"] }
temp-env = "0.3"

[lints]
workspace = true
