[package]
name = "neo-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "neo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
futures.workspace = true
neo-agent-core = { path = "../agent-core" }
neo-ai = { path = "../ai" }
neo-cloud-protocol = { path = "../cloud-protocol" }
neo-extensions = { path = "../extensions" }
neo-tui = { path = "../tui" }
neo-sdk = { path = "../sdk" }
ratatui.workspace = true
reqwest.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
neo-cloud = { path = "../neo-cloud" }
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true

[lints]
workspace = true
