[package]
name = "neo-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "neo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
futures.workspace = true
neo-agent-core = { path = "../neo-agent-core" }
neo-ai = { path = "../neo-ai" }
neo-extensions = { path = "../neo-extensions" }
neo-tui = { path = "../neo-tui" }
neo-sdk = { path = "../neo-sdk" }
reqwest.workspace = true
rustix.workspace = true
serde.workspace = true
shell-words = "1.1"
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true

[lints]
workspace = true
