[package]
name = "neo-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "neo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
futures.workspace = true
neo-agent-core = { path = "../neo-agent-core" }
neo-ai = { path = "../neo-ai" }
neo-tui = { path = "../neo-tui" }
schemars.workspace = true
reqwest.workspace = true
rustix.workspace = true
serde.workspace = true
shell-words = "1.1"
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
toml.workspace = true
webbrowser = "1.0"
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
uuid.workspace = true

[dev-dependencies]
temp-env = "0.3"
base64.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
tar.workspace = true

[lints]
workspace = true
