[package]
name = "neo-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crossterm.workspace = true
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
neo-ai = { path = "../neo-ai" }
neo-agent-core = { path = "../neo-agent-core" }
pulldown-cmark.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect.workspace = true
tokio.workspace = true
unicode-segmentation.workspace = true
unicode-width = "0.2.0"

[target.'cfg(windows)'.dependencies]
winapi-util.workspace = true

[dev-dependencies]
base64.workspace = true

[lints]
workspace = true
