[package]
name = "neo-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crossterm.workspace = true
neo-agent-core = { path = "../agent-core" }
pulldown-cmark.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect.workspace = true
tokio.workspace = true
unicode-width = "0.2.0"

[dev-dependencies]

[lints]
workspace = true
