[package]
name = "neo-rust-examples"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
futures.workspace = true
neo-agent-core = { path = "../../crates/agent-core" }
neo-ai = { path = "../../crates/ai" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[example]]
name = "model_catalog"
path = "model_catalog.rs"

[[example]]
name = "provider_registry"
path = "provider_registry.rs"

[[example]]
name = "runtime_turn"
path = "runtime_turn.rs"

[[example]]
name = "session_replay"
path = "session_replay.rs"

[[example]]
name = "tool_schema"
path = "tool_schema.rs"

[lints]
workspace = true
